// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes text color based on theme 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#FFF",
        "fontFamily": "IBMPlexSans",
        "fontSize": 18,
        "fontWeight": "normal",
        "lineHeight": 24,
        "writingDirection": "ltr",
      }
    }
    use="body1"
  >
    Text
  </Text>
  <Text
    style={
      Object {
        "color": "#4051DB",
        "fontFamily": "IBMPlexSans",
        "fontSize": 18,
        "fontWeight": "normal",
        "lineHeight": 24,
        "writingDirection": "ltr",
      }
    }
    use="body1"
  >
    Text
  </Text>
</View>
`;

exports[`includes extra background View if setBackground=true 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#3C475B",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontFamily": "IBMPlexSans-Bold",
          "fontSize": 52,
          "fontWeight": "bold",
          "lineHeight": 48,
          "writingDirection": "ltr",
        }
      }
      use="headline1"
    >
      Text
    </Text>
  </View>
</View>
`;
